# habitica-party-bot

./: .gitignore  .gitmodules  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  LICENSE  default.nix  habitica-party-bot.cabal  shell.nix
app/: Main.hs
nix/: list-t.nix  overlays.nix  pinned-package-set.nix  req_3.1.0.nix  wreq-patchable.nix
src/: Bot.hs  Placeholder.hs  Types.hs  WebServer.hs
src/Utils/: Logging.hs
