cabal-version:       2.2

name:                habitica-party-bot
version:             0.1.0.0
synopsis:            A Discord bot for my Habitica party
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Rob Whitaker
maintainer:          dev@robwhitaker.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable habitica-party-bot
  main-is:             Main.hs
  default-extensions:  OverloadedStrings
                     , LambdaCase
                     , RecordWildCards
                     , ScopedTypeVariables
                     , TupleSections
                     , TypeApplications
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -Wpartial-fields
                       -Wtabs
                       -Werror
                       -Wwarn=missing-signatures
                       -Wwarn=type-defaults
                       -Wwarn=unused-imports
                       -Wwarn=unused-local-binds
                       -Wwarn=unused-matches
                       -Wwarn=unused-do-bind

                       -fhide-source-paths
                       -freverse-errors

                       -threaded
                       -O2
  other-modules:       Bot
                     , Types
                     , WebServer
  build-depends:       aeson
                     , base
                     , discord-haskell
                     , habitica-hs
                     , polysemy
                     , relude
                     , servant-server
                     , stm
                     , warp
  hs-source-dirs:      app, src
  default-language:    Haskell2010
